--- a/based_nextjs_nestjs/client/package.json
+++ b/based_nextjs_nestjs/client/package.json
@@ -18,6 +18,9 @@
     "@types/react": "latest",
     "@types/node": "latest",
     "@types/react-dom": "latest",
+    "autoprefixer": "latest",
+    "postcss": "latest",
+    "tailwindcss": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest"
   }
